--- a/vc2013/cv-project-hand-language.vcxproj
+++ b/vc2013/cv-project-hand-language.vcxproj
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -13,6 +14,7 @@
     <ProjectGuid>{AA6B0285-78AE-4BFC-AB29-83C9CD9D3CB8}</ProjectGuid>
     <RootNamespace>cv_test</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <ProjectName>cv-project-hand-language</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -117,7 +119,7 @@
     <ClInclude Include="..\..\..\cinder_0.8.6_vc2013\blocks\Cinder-OpenCV\include\CinderOpenCV.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\cv_testApp.cpp" />
+    <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\blocks\MSKinect\src\Kinect.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
